chore: update test commands and script references across components #243

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "types": "turbo run types",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "test": "echo \"Notice: no tests available\" && exit 0",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
     "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "postinstall": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postinstall.mjs",
