--- a/components/helptext/package.json
+++ b/components/helptext/package.json
@@ -7,6 +7,7 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
+  "private": true,
   "dependencies": {
     "chalk": "^5.3.0",
     "lit": "^3.2.1"
