--- a/components/checkbox/package.json
+++ b/components/checkbox/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@alaskaairux/icons": "^4.44.1",
+    "@aurodesignsystem/auro-helptext": "*",
     "chalk": "^5.3.0",
     "lit": "^3.2.1"
   },
