--- a/components/input/package.json
+++ b/components/input/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aurodesignsystem/auro-button": "^8.2.2",
+    "@aurodesignsystem/auro-helptext": "*",
     "@aurodesignsystem/auro-icon": "^6.1.2",
     "chalk": "^5.3.0",
     "cleave.js": "^1.6.0",
