--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@auro-formkit/config",
+  "description": "Shared configurations for auro-formkit monorepo",
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "description": "Shared configurations for auro-formkit monorepo",
-  "main": "index.js",
+  "main": "./src/index.js",
   "exports": {
+    ".": "./src/index.js",
     "./commitlint": "./src/commitlint.config.js",
     "./eslint": "./src/eslint.config.mjs",
     "./rollup": "./src/rollup.config.mjs",
