--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
   "dependencies": {
     "@aurodesignsystem/auro-library": "^3.0.7"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "*"
+  },
   "devDependencies": {
     "@aurodesignsystem/eslint-config": "^1.3.3",
     "@commitlint/cli": "^19.6.1",
