--- a/components/input/package.json
+++ b/components/input/package.json
@@ -16,10 +16,11 @@
     "@aurodesignsystem/auro-helptext": "*",
     "@aurodesignsystem/auro-icon": "^6.1.2",
     "chalk": "^5.3.0",
+    "inputmask": "^5.0.9",
     "lit": "^3.2.1"
   },
   "peerDependencies": {
-    "@alaskaairux/icons": "^4.43.0",
+    "@alaskaairux/icons": "^4.44.1",
     "@aurodesignsystem/design-tokens": "^4.13.0",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2"
   },
