feat: move combobox's input to bib in fullscreen mode #322

--- a/components/combobox/package.json
+++ b/components/combobox/package.json
@@ -62,6 +62,6 @@
     "types": "tsc --project tsconfig.json",
     "lint": "npm-run-all scssLint esLint",
     "scssLint": "stylelint \"./src/**/*.scss\"",
-    "esLint": "eslint \"./src/**/*.js\""
+    "esLint": "eslint \"./src/**/*.js\" --fix"
   }
 }
