perf!: complete refactor of the released files and build system #228

--- a/components/combobox/package.json
+++ b/components/combobox/package.json
@@ -4,6 +4,7 @@
   "description": "auro-combobox HTML custom element",
   "type": "module",
   "main": "dist/index.js",
+  "require": "dist/index.cjs.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
@@ -46,8 +47,9 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-s build:version build:sass bundler build:docs types",
-    "build:version": "node ./src/scripts/version.mjs",
+    "build": "run-s sass bundler types build:docs",
+    "sass": "run-s build:sass postCss:component sass:render",
+    "build:version": "node ./scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
