--- a/components/counter/package.json
+++ b/components/counter/package.json
@@ -8,6 +8,7 @@
   },
   "type": "module",
   "main": "dist/index.js",
+  "require": "dist/index.cjs.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
@@ -37,7 +38,7 @@
     "web-component-analyzer": "^2.0.0"
   },
   "scripts": {
-    "build": "run-s sass bundler build:docs types",
+    "build": "run-s sass bundler types build:docs",
     "build:version": "node ./scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
