--- a/components/radio/tsconfig.json
+++ b/components/radio/tsconfig.json
@@ -11,6 +11,9 @@
   "exclude": [
     "node_modules",
     "dist",
-    "build"
+    "docTemplates",
+    "test",
+    "coverage",
+    "src/registered.js"
   ]
 }
