feat: use bibtemplate for dropdown bib content

--- a/turbo.json
+++ b/turbo.json
@@ -68,6 +68,7 @@
     },
     "@aurodesignsystem/auro-datepicker#build": {
       "dependsOn": [
+        "@aurodesignsystem/auro-bibtemplate#build",
         "@aurodesignsystem/auro-input#build",
         "@aurodesignsystem/auro-dropdown#build"
       ]
