--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@aurodesignsystem/auro-formkit",
   "version": "2.0.0-beta.42",
   "description": "A collection of web components used to build forms.",
+  "homepage": "https://github.com/AlaskaAirlines/auro-formkit#readme",
+  "bugs": {
+    "url": "https://github.com/AlaskaAirlines/auro-formkit/issues"
+  },
   "type": "module",
   "license": "Apache-2.0",
   "repository": {
@@ -109,7 +113,7 @@
   "release": {
     "branches": [
       {
-        "name": "default"
+        "name": "main"
       },
       {
         "name": "beta",
