--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass": "turbo run sass",
     "build:version": "turbo run build:version",
     "dev": "turbo run dev --parallel",
+    "dev:closed": "turbo run dev:closed --parallel",
     "lint": "turbo run lint",
     "test": "turbo run test",
     "test:watch": "turbo run test:watch",
@@ -66,6 +67,7 @@
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.10",
     "@web/dev-server": "^0.4.6",
+    "@web/dev-server-hmr": "^0.4.1",
     "@web/test-runner": "^0.19.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
