--- a/components/counter/package.json
+++ b/components/counter/package.json
@@ -47,9 +47,11 @@
     "sass": "run-s build:sass sass:render",
     "clean": "rm -rf dist build",
     "dev": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "dev:closed": "concurrently \"npm run build:watch\" \"npm run serve:closed\"",
+    "serve": "web-dev-server --open",
+    "serve:closed": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
-    "serve": "web-dev-server --open demo/ --node-resolve --watch",
     "test": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --coverage",
     "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\"  --watch",
     "types": "tsc --project tsconfig.json",
