--- a/components/select/package.json
+++ b/components/select/package.json
@@ -58,10 +58,12 @@
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
     "build:docs": "wca analyze 'scripts/wca/*.js' --outFiles docs/api.md; node ../../packages/build-tools/src/docProcessor.mjs --component select",
     "clean": "rm -rf dist build",
-    "dev": "web-dev-server",
+    "dev": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "dev:closed": "concurrently \"npm run build:watch\" \"npm run serve:closed\"",
+    "serve": "web-dev-server --open",
+    "serve:closed": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
-    "serve": "web-dev-server",
     "test": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --coverage --port 7700",
     "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --watch  --port 7700",
     "types": "tsc --project tsconfig.json",
