--- a/components/input/package.json
+++ b/components/input/package.json
@@ -16,7 +16,7 @@
     "@aurodesignsystem/auro-helptext": "*",
     "@aurodesignsystem/auro-icon": "^6.1.2",
     "chalk": "^5.3.0",
-    "inputmask": "^5.0.9",
+    "imask": "^7.6.1",
     "lit": "^3.2.1"
   },
   "peerDependencies": {
