fix: update web-dev-server config to append .html for non-file URLs and enhance turbo.json dependencies

--- a/turbo.json
+++ b/turbo.json
@@ -27,9 +27,11 @@
       "outputs": ["README.md", "demo/index.*", "docs/partials/*.md"]
     },
     "dev": {
+      "dependsOn": ["build"],
       "persistent": true
     },
     "dev:closed": {
+      "dependsOn": ["build"],
       "persistent": true
     },
     "clean": {
