--- a/components/counter/package.json
+++ b/components/counter/package.json
@@ -41,7 +41,7 @@
     "build": "run-s sass bundler types build:docs",
     "build:version": "node ./scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
-    "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
+    "build:watch": "nodemon -e scss,js,md --watch src,docs,demo,apiExamples  --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "build:docs": "wca analyze 'scripts/wca/*.js' --outFiles docs/api.md; node ../../packages/build-tools/src/docProcessor.mjs --component counter",
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
     "sass": "run-s build:sass sass:render",
