--- a/components/bibtemplate/package.json
+++ b/components/bibtemplate/package.json
@@ -9,7 +9,7 @@
   "license": "Apache-2.0",
   "private": true,
   "dependencies": {
-    "@aurodesignsystem/auro-header": "3.0.0",
+    "@aurodesignsystem/auro-header": "^4.0.0",
     "@aurodesignsystem/auro-icon": "^6.1.2",
     "chalk": "^5.3.0",
     "lit": "^3.2.1"
