--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "sweep": "find ./components ./packages -type d -name 'dist' -exec rm -rf {} + && find ./ -type d -name '.turbo' -exec rm -rf {} + && find ./components ./packages -not -path '*/node_modules/*' -type f \\( -name '*.css' -o -name '*-css.js' \\) -delete",
     "preCommit": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/pre-commit.mjs",
     "prepare": "husky",
-    "deploy-demo": "npm run build && sh ./deploy-components.sh"
+    "deploy-demo": "npm run build && sh ./deploy-components.sh",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@aurodesignsystem/auro-library": "^3.0.10"
@@ -59,12 +61,19 @@
   },
   "devDependencies": {
     "@aurodesignsystem/eslint-config": "^1.3.3",
+    "@chromatic-com/storybook": "^3.2.5",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@open-wc/testing": "^4.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^12.0.1",
+    "@storybook/addon-essentials": "^8.6.4",
+    "@storybook/addon-themes": "^8.6.4",
+    "@storybook/blocks": "^8.6.4",
+    "@storybook/test": "^8.6.4",
+    "@storybook/web-components": "^8.6.4",
+    "@storybook/web-components-vite": "^8.6.4",
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.10",
     "@web/dev-server": "^0.4.6",
@@ -79,7 +88,9 @@
     "core-js": "^3.40.0",
     "eslint": "^9.18.0",
     "eslint-plugin-jsdoc": "^50.6.1",
+    "eslint-plugin-storybook": "^0.11.4",
     "husky": "^9.1.7",
+    "lit": "^3.2.1",
     "lodash": "^4.17.21",
     "markdown-magic": "^3.3.0",
     "nodemon": "^3.1.9",
@@ -88,8 +99,10 @@
     "postcss-custom-properties": "^14.0.4",
     "postcss-discard-comments": "^7.0.3",
     "prettier": "^3.4.2",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.83.1",
     "semantic-release": "^24.2.1",
+    "storybook": "^8.6.4",
     "stylelint": "^16.13.1",
     "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard": "^37.0.0",
@@ -211,5 +224,10 @@
       "types": "./components/select/dist/index.d.ts",
       "default": "./components/select/dist/index.js"
     }
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
