--- a/components/input/package.json
+++ b/components/input/package.json
@@ -12,17 +12,11 @@
     "url": "https://github.com/AlaskaAirlines/auro-input"
   },
   "dependencies": {
-    "@aurodesignsystem/auro-button": "^8.2.2",
+    "@aurodesignsystem/auro-button": "^9.0.0",
     "@aurodesignsystem/auro-helptext": "*",
-    "@aurodesignsystem/auro-icon": "^6.1.2",
+    "@aurodesignsystem/auro-icon": "^7.0.1",
     "chalk": "^5.3.0",
-    "imask": "^7.6.1",
-    "lit": "^3.2.1"
-  },
-  "peerDependencies": {
-    "@alaskaairux/icons": "^4.44.1",
-    "@aurodesignsystem/design-tokens": "^4.13.0",
-    "@aurodesignsystem/webcorestylesheets": "^5.1.2"
+    "imask": "^7.6.1"
   },
   "devDependencies": {
     "@alaskaairux/icons": "^4.44.1",
