--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "deploy-demo": "npm run build && sh ./deploy-components.sh"
   },
   "dependencies": {
-    "@aurodesignsystem/auro-library": "^3.0.10"
+    "@aurodesignsystem/auro-library": "^3.0.10",
+    "lit": "^3.2.1",
+    "@lit/reactive-element": "^2.0.4"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "*"
