--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^12.0.1",
+    "@storybook/addon-a11y": "^8.6.7",
     "@storybook/addon-essentials": "^8.6.4",
     "@storybook/addon-themes": "^8.6.4",
     "@storybook/blocks": "^8.6.4",
