--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@semantic-release/npm": "^12.0.1",
     "@storybook/addon-a11y": "^8.6.7",
     "@storybook/addon-essentials": "^8.6.4",
+    "@storybook/addon-interactions": "^8.6.7",
     "@storybook/addon-themes": "^8.6.4",
     "@storybook/blocks": "^8.6.4",
     "@storybook/test": "^8.6.4",
@@ -94,6 +95,7 @@
     "lit": "^3.2.1",
     "lodash": "^4.17.21",
     "markdown-magic": "^3.3.0",
+    "mockdate": "^3.0.5",
     "nodemon": "^3.1.9",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.0",
@@ -103,6 +105,7 @@
     "remark-gfm": "^4.0.1",
     "sass": "^1.83.1",
     "semantic-release": "^24.2.1",
+    "shadow-dom-testing-library": "^1.12.0",
     "storybook": "^8.6.4",
     "stylelint": "^16.13.1",
     "stylelint-config-idiomatic-order": "^10.0.0",
