--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
   },
   "dependencies": {
     "lit": "^3.2.1",
-    "@lit/reactive-element": "^2.0.4"
+    "@lit/reactive-element": "^2.0.4",
+    "@aurodesignsystem/auro-library": "^3.0.13"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "*"
   },
   "devDependencies": {
-    "@aurodesignsystem/auro-library": "^3.0.13",
     "@aurodesignsystem/eslint-config": "^1.3.3",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
