--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -13,15 +13,16 @@
   },
   "dependencies": {
     "@alaskaairux/icons": "^5.3.0",
+    "@alaskaairux/icons": "^5.3.0",
     "@auro-formkit/form-validation": "*",
     "@aurodesignsystem/auro-bibtemplate": "*",
     "@aurodesignsystem/auro-dropdown": "*",
     "@aurodesignsystem/auro-input": "*",
-    "@aurodesignsystem/auro-popover": "^5.0.0",
+    "@aurodesignsystem/auro-popover": "^5.0.1",
     "@material/mwc-icon-button": "^0.27.0",
     "@material/mwc-list": "^0.27.0",
     "@material/mwc-menu": "^0.27.0",
-    "chalk": "^5.3.0",
+    "chalk": "^5.4.1",
     "date-fns": "^4.1.0",
     "lit": "^3.2.1",
     "wc-range-datepicker": "^1.3.0"
@@ -30,12 +31,12 @@
     "@auro-formkit/build-tools": "*",
     "@auro-formkit/config": "*",
     "@auro-formkit/typescript": "*",
-    "@aurodesignsystem/design-tokens": "^4.13.0",
-    "@aurodesignsystem/webcorestylesheets": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
-    "compression": "^1.7.4",
+    "@aurodesignsystem/design-tokens": "^5.8.0",
+    "@aurodesignsystem/webcorestylesheets": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "compression": "^1.8.0",
     "copyfiles": "^2.4.1",
-    "rollup": "^4.24.3",
+    "rollup": "^4.39.0",
     "rollup-plugin-serve": "^3.0.0",
     "wc-sass-render": "^1.4.0",
     "web-component-analyzer": "^2.0.0"
