--- a/components/checkbox/package.json
+++ b/components/checkbox/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@alaskaairux/icons": "^5.3.0",
     "@aurodesignsystem/auro-helptext": "*",
+    "@aurodesignsystem/auro-library": "^4.5.0",
     "chalk": "^5.4.1",
     "lit": "^3.2.1"
   },
