--- a/.releaserc
+++ b/.releaserc
@@ -4,41 +4,25 @@
       "name": "main"
     },
     {
-      "name": "beta",
-      "prerelease": true
+      "name": "rc/*",
+      "channel": "rc",
+      "prerelease": "rc-${name.replace(/^rc\\//g, '')}"
     }
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    {
-      "preset": "conventionalcommits",
-      "releaseRules": [
-        { "type": "docs", "scope": "README", "release": "patch" },
-        { "type": "refactor", "release": "patch" },
-        { "type": "style", "release": "patch" }
-      ]
-    },
-    "@semantic-release/release-notes-generator",
     [
-      "@semantic-release/changelog",
+      "@semantic-release/commit-analyzer",
       {
-        "changelogFile": "./CHANGELOG.md",
-        "changelogTitle": "# Semantic Release Automated Changelog"
+        "preset": "conventionalcommits",
+        "releaseRules": [
+          { "type": "docs", "scope": "README", "release": "patch" },
+          { "type": "refactor", "release": "patch" },
+          { "type": "style", "release": "patch" }
+        ]
       }
     ],
     "@semantic-release/npm",
-    [
-      "@semantic-release/git",
-      {
-        "assets": [
-          "./package.json",
-          "./CHANGELOG.md",
-          "./readme.md",
-          "./docs/api.md"
-        ],
-        "noVerify": true
-      }
-    ],
     "@semantic-release/github"
   ]
 }
+ 
