feat: initial layout implementation #481

--- a/components/input/package.json
+++ b/components/input/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aurodesignsystem/auro-button": "^9.3.2",
+    "@aurodesignsystem/auro-layout-element": "*",
     "@aurodesignsystem/auro-helptext": "*",
     "@aurodesignsystem/auro-icon": "^8.0.2",
     "chalk": "^5.4.1",
