--- a/components/checkbox/package.json
+++ b/components/checkbox/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/AlaskaAirlines/auro-checkbox"
   },
   "dependencies": {
+    "@aurodesignsystem/auro-layout-element": "*",
     "@alaskaairux/icons": "^5.3.0",
     "@aurodesignsystem/auro-helptext": "*",
     "chalk": "^5.4.1",
