feat: implement layout control for dropdown

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,13 @@
         "csspart",
         "DDMM",
         "describedby",
+        "dropdownbib",
+        "exportparts",
         "formkit",
         "helptext",
         "imask",
+        "isfullscreen",
+        "labelledby",
         "matchwidth",
         "maxlength",
         "menuoption",
