--- a/.github/workflows/add-project.yml
+++ b/.github/workflows/add-project.yml
@@ -6,8 +6,7 @@ on:
       - opened
 
 jobs:
-  add-to-project:
-    name: Add issue to project
+  add:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/add-to-project@v1.0.2
