--- a/.releaserc
+++ b/.releaserc
@@ -21,8 +21,14 @@
         ]
       }
     ],
+    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "./CHANGELOG.md"
+      }
+    ],
     "@semantic-release/npm",
     "@semantic-release/github"
   ]
 }
- 
